	* Refactored classes in 'common' into a 'libswitchyard' library.
2014-08-01 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'make rpm' target.
	* Added a PkgConfig profile in 'Switchyard.pc.in'.
2014-08-02 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'SyMcastSocket' class in 'sy/symcastsocket.cpp' and
	'sy/symcastsocket.h'.
	* Refactored the 'SyGpioServer' class to use 'SyMcastSocket' in
	'sy/sygpio_server.cpp' and 'sy/sygpio_server.h'.
	* Refactored the 'SyAdvServer' class to use 'SyMcastSocket' in
	'sy/syadv_server.cpp' and 'sy/syadv_server.h'.
2014-08-02 Fred Gleason <fredg@paravelsystems.com>
	* Refactored and simplified the callback system in the 'SyRtpServer'
	class in 'sy/syrtp_server.cpp' and 'sy/sy_rtpserver.h'.
2014-08-02 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'SyRtpServer::shutdown()' method in 'sy/syrtpserver.cpp'
	and 'sy/syrtpserver.h'.
2014-08-02 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'SyRtpHeader' class in 'sy/syrtp_header.cpp' and
	'sy/syrtp_header.h'.
2014-08-02 Fred Gleason <fredg@paravelsystems.com>
	* Added 'syrtp_header.h' to the 'include_HEADERS' rule in
	'sy/Makefile.am'.
	* Added 'symcastsocket.h' to the 'include_HEADERS' rule in
	'sy/Makefile.am'.
2014-08-04 Fred Gleason <fredg@paravelsystems.com>
	* Added an include for 'QtGui/QApplication' in 'tests/syd.cpp' to
	allow building with Qt<=4.2.
2014-08-04 Fred Gleason <fredg@paravelsystems.com>
	* Added 'SySyslog()', 'SyOpenLog()' and 'SyCloseLog()' functions
	in 'sy/sylogger.cpp' and 'sy/sylogger.h'.
2014-08-04 Fred Gleason <fredg@paravelsystems.com>
	* Removed extraneous include from 'sy/sylogger.h'.
2014-08-04 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.7.0.
2014-08-04 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'BuildRoot:' directive in 'switchyard.spec.in'.
2014-08-15 Fred Gleason <fredg@paravelsystems.com>
	* Fixed warnings in 'sy/sycmdswitch.cpp'.
	* Fixed warnings in 'sy/sygpio_server.cpp'.