@@ -22,11 +22,11 @@ SOURCES += syadv_tag.cpp
 SOURCES += syastring.cpp
 SOURCES += sycmdswitch.cpp
 SOURCES += sygpio_server.cpp
-SOURCES += sylogger.cpp
 SOURCES += sylwrp_clientconnection.cpp
 SOURCES += sylwrp_server.cpp
 SOURCES += symcastsocket.cpp
 SOURCES += syprofile.cpp
+SOURCES += sysyslog.cpp
 SOURCES += syringbuffer.cpp
 SOURCES += syrouting.cpp
 SOURCES += syrtp_header.cpp
@@ -41,11 +41,11 @@ HEADERS += syastring.h
 HEADERS += sycmdswitch.h
 HEADERS += syconfig.h
 HEADERS += sygpio_server.h
-HEADERS += sylogger.h
 HEADERS += sylwrp_clientconnection.h
 HEADERS += sylwrp_server.h
 HEADERS += symcastsocket.h
 HEADERS += syprofile.h
+HEADERS += sysyslog.h
 HEADERS += syringbuffer.h
 HEADERS += syrouting.h
 HEADERS += syrtp_header.h
@@ -56,7 +56,8 @@ INCLUDEPATH += ../
 LIBS += -lwsock32
 
 CONFIG += qt
-CONFIG += staticlib
+CONFIG += dll
+CONFIG += thread
 CONFIG += release
 CONFIG += warn_on
 
